Login and SignUp Views

--- a/NuiOS/pt-BR.lproj/SignUp.strings
+++ b/NuiOS/pt-BR.lproj/SignUp.strings
@@ -1,6 +1,84 @@
 
+/* Class = "UILabel"; text = "Validation Code"; ObjectID = "03a-pH-Jqr"; */
+"03a-pH-Jqr.text" = "Código de Validação";
+
+/* Class = "UIBarButtonItem"; title = " "; ObjectID = "58O-zc-XBE"; */
+"58O-zc-XBE.title" = " ";
+
+/* Class = "UIButton"; normalTitle = "Next"; ObjectID = "5yl-AN-LmT"; */
+"5yl-AN-LmT.normalTitle" = "Próximo";
+
+/* Class = "UILabel"; text = "confirm password"; ObjectID = "6jb-Cz-abq"; */
+"6jb-Cz-abq.text" = "confirmar senha";
+
+/* Class = "UILabel"; text = "password"; ObjectID = "9Vh-1k-2vZ"; */
+"9Vh-1k-2vZ.text" = "senha";
+
+/* Class = "UILabel"; text = "A SMS was sent to your phone number."; ObjectID = "9by-yW-BWH"; */
+"9by-yW-BWH.text" = "Um SMS com o código foi enviado para o número informado.";
+
+/* Class = "UIButton"; normalTitle = "Next"; ObjectID = "9cN-Fz-IFC"; */
+"9cN-Fz-IFC.normalTitle" = "Próximo";
+
 /* Class = "UILabel"; text = "Welcome to NuiOS SignUp tap  continue to start your signup."; ObjectID = "ADT-Aq-hY7"; */
-"ADT-Aq-hY7.text" = "Seja bem vindo ao NuiOS Cadastro, clique em Continuar para começar.";
+"ADT-Aq-hY7.text" = "Bem vindo ao NuiOS Cadastro clique continuar para começar.";
+
+/* Class = "UIButton"; normalTitle = "Next"; ObjectID = "DYs-3Q-J9o"; */
+"DYs-3Q-J9o.normalTitle" = "Próximo";
+
+/* Class = "UILabel"; text = "example@mail.com"; ObjectID = "IoH-CJ-snV"; */
+"IoH-CJ-snV.text" = "exemplo@mail.com";
+
+/* Class = "UILabel"; text = "Title"; ObjectID = "J9h-QE-5eo"; */
+"J9h-QE-5eo.text" = "Titulo";
+
+/* Class = "UIButton"; normalTitle = "Login"; ObjectID = "LzC-UH-74n"; */
+"LzC-UH-74n.normalTitle" = "Login";
+
+/* Class = "UIBarButtonItem"; title = " "; ObjectID = "Oyi-ZF-Vl7"; */
+"Oyi-ZF-Vl7.title" = " ";
+
+/* Class = "UIBarButtonItem"; title = " "; ObjectID = "Q46-Gl-c7Y"; */
+"Q46-Gl-c7Y.title" = " ";
+
+/* Class = "UILabel"; text = "It must contain at least 8 characters"; ObjectID = "Qz0-WV-lxZ"; */
+"Qz0-WV-lxZ.text" = "Deve conter no minimo 8 caracteres.";
+
+/* Class = "UILabel"; text = "Detail"; ObjectID = "Sog-Vd-olv"; */
+"Sog-Vd-olv.text" = "Detalhes";
+
+/* Class = "UIButton"; normalTitle = "Next"; ObjectID = "UQw-BW-ifV"; */
+"UQw-BW-ifV.normalTitle" = "Próximo";
+
+/* Class = "UILabel"; text = "Tap Next to confirm."; ObjectID = "XMc-Ce-Gcj"; */
+"XMc-Ce-Gcj.text" = "Clique em Próximo para confirmar.";
+
+/* Class = "UILabel"; text = "You will use this email for login."; ObjectID = "Xzn-Qv-mHk"; */
+"Xzn-Qv-mHk.text" = "Esse email será usado no login.";
+
+/* Class = "UIBarButtonItem"; title = " "; ObjectID = "bZQ-cH-ib3"; */
+"bZQ-cH-ib3.title" = " ";
+
+/* Class = "UIBarButtonItem"; title = " "; ObjectID = "bua-Iu-oq0"; */
+"bua-Iu-oq0.title" = " ";
+
+/* Class = "UILabel"; text = "Congratulations you completed your sign up. Tap Login to start using the app."; ObjectID = "ctZ-Fp-KR4"; */
+"ctZ-Fp-KR4.text" = "Parabéns você completou o seu cadastro. Clique em Login para começar a usar o app.";
+
+/* Class = "UIButton"; normalTitle = "Next"; ObjectID = "eE2-pT-1I2"; */
+"eE2-pT-1I2.normalTitle" = "Próximo";
+
+/* Class = "UILabel"; text = "(Area Code)+Number"; ObjectID = "j1h-Tn-q7L"; */
+"j1h-Tn-q7L.text" = "(DDD)+Número";
+
+/* Class = "UILabel"; text = "This phone number will be used to validate your account."; ObjectID = "m3R-Yp-WA9"; */
+"m3R-Yp-WA9.text" = "Esse número será usado para validar sua conta.";
+
+/* Class = "UILabel"; text = "Conforme o seu RG"; ObjectID = "tvn-U0-bl8"; */
+"tvn-U0-bl8.text" = "Conforme o seu RG";
+
+/* Class = "UIButton"; normalTitle = "Next"; ObjectID = "wZC-54-3gK"; */
+"wZC-54-3gK.normalTitle" = "Próximo";
 
 /* Class = "UIButton"; normalTitle = "Continue"; ObjectID = "zcv-Gc-rIO"; */
 "zcv-Gc-rIO.normalTitle" = "Continuar";
