--- a/NuiOS/pt-BR.lproj/PasswordUpdate.strings
+++ b/NuiOS/pt-BR.lproj/PasswordUpdate.strings
@@ -15,13 +15,19 @@
 "Gd3-u9-5Fw.text" = "confirmar nova senha";
 
 /* Class = "UILabel"; text = "It must be diferent from your current password."; ObjectID = "PZC-tp-AO5"; */
-"PZC-tp-AO5.text" = "Deve ser diferente da sua senha atual.";
+"PZC-tp-AO5.text" = "A sua nova senha deve ser diferente da atual.";
 
 /* Class = "UIButton"; normalTitle = "Confirm"; ObjectID = "b1e-C9-FgF"; */
 "b1e-C9-FgF.normalTitle" = "Confirmar";
 
+/* Class = "UILabel"; text = "Your current password, please"; ObjectID = "pu9-Q3-Xhl"; */
+"pu9-Q3-Xhl.text" = "Sua senha atual, por favor";
+
 /* Class = "UIBarButtonItem"; title = " "; ObjectID = "rQH-wp-9Ba"; */
 "rQH-wp-9Ba.title" = " ";
 
+/* Class = "UILabel"; text = "New password"; ObjectID = "xWg-rC-Yem"; */
+"xWg-rC-Yem.text" = "Nova senha";
+
 /* Class = "UILabel"; text = "Your password is necessary for safety."; ObjectID = "zfX-Ur-X43"; */
-"zfX-Ur-X43.text" = "A senha é necessária para a sua segurança.";
+"zfX-Ur-X43.text" = "A sua senha é necessária para sua segurança.";
