--- a/NuiOS/pt-BR.lproj/EmailUpdate.strings
+++ b/NuiOS/pt-BR.lproj/EmailUpdate.strings
@@ -8,14 +8,20 @@
 /* Class = "UILabel"; text = "Confirmation Code"; ObjectID = "F4N-YY-QAB"; */
 "F4N-YY-QAB.text" = "Código de Confirmação";
 
+/* Class = "UILabel"; text = "Type the confirmation code"; ObjectID = "Fle-nF-Ynt"; */
+"Fle-nF-Ynt.text" = "Digite o código de confirmação";
+
 /* Class = "UIBarButtonItem"; title = " "; ObjectID = "Kkq-9v-OK6"; */
 "Kkq-9v-OK6.title" = " ";
 
-/* Class = "UILabel"; text = "You will use this email for login."; ObjectID = "MVx-bU-1FG"; */
-"MVx-bU-1FG.text" = "Esse email substituirá o atual, entao você usará ele para efetuar o login.";
+/* Class = "UILabel"; text = "This email will replace the current email address"; ObjectID = "MVx-bU-1FG"; */
+"MVx-bU-1FG.text" = "Email substituirá o seu atual.";
 
 /* Class = "UILabel"; text = "An email was sent to your new email address."; ObjectID = "VXg-yH-OcG"; */
-"VXg-yH-OcG.text" = "Um email foi enviado para seu novo endereço de email.";
+"VXg-yH-OcG.text" = "Um email foi enviado para o seu novo endereço de email.";
+
+/* Class = "UIButton"; normalTitle = "I do not received the code"; ObjectID = "bIR-zJ-iZr"; */
+"bIR-zJ-iZr.normalTitle" = "Não recebi o código";
 
 /* Class = "UIBarButtonItem"; title = " "; ObjectID = "fgC-Ef-kZQ"; */
 "fgC-Ef-kZQ.title" = " ";
@@ -23,11 +29,17 @@
 /* Class = "UIButton"; normalTitle = "Confirm"; ObjectID = "kQ0-Gq-kgJ"; */
 "kQ0-Gq-kgJ.normalTitle" = "Confirmar";
 
+/* Class = "UILabel"; text = "What is your new email address ?"; ObjectID = "mGX-4D-0dq"; */
+"mGX-4D-0dq.text" = "Qual o seu novo email ?";
+
 /* Class = "UILabel"; text = "password"; ObjectID = "qoh-j9-c1Z"; */
 "qoh-j9-c1Z.text" = "senha";
 
+/* Class = "UILabel"; text = "Your password, please"; ObjectID = "tgZ-0S-cCa"; */
+"tgZ-0S-cCa.text" = "Sua senha, por favor";
+
 /* Class = "UILabel"; text = "Your password is necessary for safety."; ObjectID = "x1l-c0-P6s"; */
-"x1l-c0-P6s.text" = "A senha é necessária para sua segurança.";
+"x1l-c0-P6s.text" = "A sua senha é necessária para sua segurança.";
 
 /* Class = "UIButton"; normalTitle = "Next"; ObjectID = "zTc-Jq-hIp"; */
 "zTc-Jq-hIp.normalTitle" = "Próximo";
