--- a/NuiOS/Base.lproj/Localizable.strings
+++ b/NuiOS/Base.lproj/Localizable.strings
@@ -9,23 +9,39 @@
 //MARK: - UIAlertControllerShortcuts and UIAlertController
 
 
-"Yes" = "Yes";
-"No" = "No";
-"Logout" = "Logout";
-"Do you want to continue ?" =  "Do you want to continue ?":
-"Updating" = "Updating";
-"Update Password" = "Update Password";
-"Password updated with success." = "Password updated with success.";
-"Confirming Update" = "Confirming Update";
-"Email update" = "Email update";
-"Phone number update" = "Phone number update";
-"Your email was updated with success." = "Your email was updated with success.";
-"Your phone number was updated with success." = "Your phone number was updated with success.";
-"Sending" = "Sending";
-"Recovery Code" = "Recovery Code";
-"The recovery code is not valid." = "The recovery code is not valid.";
-"Recovery Account" = "Recovery Account";
+"yes" = "Yes";
+"no" = "No";
+"logout" = "Logout";
+"want_to_continue?" =  "Do you want to continue ?";
+"updating" = "Updating";
+"update_password" = "Update Password";
+"password_update_success" = "Password updated with success.";
+"confirming_update" = "Confirming Update";
+"email_update" = "Email update";
+"phone_number_update" = "Phone number update";
+"email_update_success" = "Your email was updated with success.";
+"phoneNumber_update_success" = "Your phone number was updated with success.";
+"sending" = "Sending";
+"recovery_code" = "Recovery Code";
+"recovery_code_invalid" = "The recovery code is not valid.";
+"recovery_account" = "Recovery Account";
+"password_update_fail" = "It was not possible to update your password.";
+"password_and_confirmation_diferent" = "Password and Confirmation values are not the same.";
+"values_not_match" = "The typed values are not the same.";
+"account_activation" = "Account Activation";
+"account_activation_success" = "Your account was activated with success.";
+"choose_image" = "Choose Image";
+"camera" = "Camera";
+"gallery" = "Gallery";
+"cancel" = "Cancel";
+"cancel_signup" = "Cancel Sign up";
+"lose_signup_info_continue?" = "You will lose all added informations.\n\nDo you want to continue?";
+"send_code_again" = "Send code again";
+"validating" = "Validating";
+"typed_code_invalid" = "The typed code is invalid.";
+"ask_new_code" = "Ask for a new code.";
 
 //MARK: - App Texts
-"An email was sent to email address " = "An email was sent to email address ";
+"email_sent_to_%@" = "An email was sent to email address %@.";
+
 
