--- a/NuiOS/pt-BR.lproj/Localizable.strings
+++ b/NuiOS/pt-BR.lproj/Localizable.strings
@@ -14,84 +14,84 @@
 
 //MARK: - UIAlertControllerShortcuts and UIAlertController
 
-"yes" = "Yes";
-"no" = "No";
-"logout" = "Logout";
-"want_to_continue?" =  "Do you want to continue ?";
-"updating" = "Updating";
-"password_update" = "Password Update"; // used on NotificationBannerShortcuts
-"password_update_success" = "Password updated with success.";
-"confirming_update" = "Confirming Update";
-"email_update" = "Email update";
-"phone_number_update" = "Phone number update";
-"email_update_success" = "Your email was updated with success.";
-"phoneNumber_update_success" = "Your phone number was updated with success.";
-"sending" = "Sending";
-"recovery_code" = "Recovery Code";
-"recovery_code_invalid" = "The recovery code is not valid.";
-"recovery_account" = "Recovery Account";
-"password_update_fail" = "It was not possible to update your password.";
-"password_and_confirmation_diferent" = "Password and Confirmation values are not the same.";
-"values_not_match" = "The typed values are not the same.";
-"account_activation" = "Account Activation";
-"account_activation_success" = "Your account was activated with success.";
-"choose_image" = "Choose Image";
+"yes" = "Sim";
+"no" = "Não";
+"logout" = "Sair";
+"want_to_continue?" =  "Deseja continuar ?";
+"updating" = "Atualizando ...";
+"password_update" = "Atualizar senha"; // used on NotificationBannerShortcuts
+"password_update_success" = "Senha atualizada com sucesso.";
+"confirming_update" = "Confirmando Atualização";
+"email_update" = "Atualizar email";
+"phone_number_update" = "Atualizar número";
+"email_update_success" = "Email atualizado com sucesso.";
+"phoneNumber_update_success" = "Número atualizado com sucesso.";
+"sending" = "Enviando ...";
+"recovery_code" = "Código de recuperação";
+"recovery_code_invalid" = "O código não é válido.";
+"recovery_account" = "Recuperar conta";
+"password_update_fail" = "Não foi possível atualizar sua senha.";
+"password_and_confirmation_diferent" = "A senha e a confirmação da senha não são iguais.";
+"values_not_match" = "Os valores informados não são iguais.";
+"account_activation" = "Ativação de conta";
+"account_activation_success" = "Conta ativada com sucesso.";
+"choose_image" = "Escolher imagem";
 "camera" = "Camera";
-"gallery" = "Gallery";
-"cancel" = "Cancel";
-"cancel_signup" = "Cancel Sign up";
-"lose_signup_info_continue?" = "You will lose all added informations.\n\nDo you want to continue?";
-"send_code_again" = "Send code again";
-"validating" = "Validating";
-"typed_code_invalid" = "The typed code is invalid.";
-"ask_new_code" = "Ask for a new code.";
+"gallery" = "Galeria";
+"cancel" = "Cancelar";
+"cancel_signup" = "Cancelar cadastro";
+"lose_signup_info_continue?" = "Você vai perder todas as informações adicionadas.\n\nDeseja continuar mesmo assim?";
+"send_code_again" = "Enviar código novamente";
+"validating" = "Validando";
+"typed_code_invalid" = "O código informado é inválido.";
+"ask_new_code" = "Peça um novo código.";
 
 //MARK: - NotificationBannerShortcuts
-"request_error" = "Request Error";
-"no_connection_title" = "No Connection";
-"invalid_credentials_login_title" = "Invalid Credentials";
-"invalid_login_mess" = "Invalid username or password";
-"phoneNumber_unavailable" = "Phone number unavailable";
-"phoneNumber_in_use_try_other" = "This phone number is in use. Try another one.";
-"email_unavailable" = "Email unavailable";
-"email_in_use_try_other" = "This email is in use. Try another one.";
-"sms_sent" = "SMS sent";
-"sms_activ_code_sent" = "A sms with the activation code was sent.";
-"email_sent" = "Email sent";
-"email_activ_code_sent" = "An email with the activation code was sent.";
-"sms_rec_code_sent" = "A sms with the recovery code was sent.";
-"email_rec_code_sent" = "An email with the recovery code was sent.";
-"new_password_equal_current" = "Your new password is equal to current one.";
-"name_update_failure" = "Name Update Failure";
-"name_can_not_blank" = "Your name can not be blank.";
-"was_not_possible_update_name" = "It was not possible to update your name.";
-"picture_update_failure" = "Picture Update Failure";
-"was_not_possible_update_picture" = "It was not possible to update your picture.";
-"email_update_failure" = "Email Update Failure";
-"was_not_possible_update_email" = "It was not possible to confirm your email update.";
-"phoneNumber_update_failure" = "Phone number Update Failure";
-"was_not_possible_update_phoneNumber" = "It was not possible to confirm your phone number update.";
-"picture_update" = "Picture Update";
-"err_using_selected_image" = "Some error happened when trying to use the selected image.";
+"request_error" = "Erro na requisição";
+"no_connection_title" = "Sem Conexão";
+"invalid_credentials_login_title" = "Credenciais Inválidas";
+"invalid_login_mess" = "Usuário ou senha inválido";
+"phoneNumber_unavailable" = "Número indisponível";
+"phoneNumber_in_use_try_other" = "Esse número está em uso. Tente outro.";
+"email_unavailable" = "Email indisponível";
+"email_in_use_try_other" = "Esse email está em uso. Tente outro.";
+"sms_sent" = "SMS enviado";
+"sms_activ_code_sent" = "Um sms com o código de ativação foi enviado.";
+"email_sent" = "Email enviado";
+"email_activ_code_sent" = "Um email com o código de ativação foi enviado.";
+"sms_rec_code_sent" = "Um sms com o código de recuperação foi enviado.";
+"email_rec_code_sent" = "Um email com o código de recuperação foi enviado.";
+"new_password_equal_current" = "A nova senha é igual a sua atual senha.";
+"name_update_failure" = "Falha em atualizar nome";
+"name_can_not_blank" = "O campo nome não pode ficar em branco.";
+"was_not_possible_update_name" = "Não foi possível atualizar o seu nome.";
+"picture_update_failure" = "Falha em atualizar imagem";
+"was_not_possible_update_picture" = "Não foi possível atualizar a sua imagem.";
+"email_update_failure" = "Falha em atualizar email";
+"was_not_possible_update_email" = "Não foi possível confirmar a atualização do seu email.";
+"phoneNumber_update_failure" = "Falha em atualizar número";
+"was_not_possible_update_phoneNumber" = "Não foi possível confirmar a atualização do seu número.";
+"picture_update" = "Atualizar Imagem";
+"err_using_selected_image" = "Não foi possível utilizar a imagem selecionada. Tente novamente.";
 
 //MARK: - App Texts
-"email_sent_to_%@" = "An email was sent to email address %@.";
-"name" = "Name";
-"phoneNumber" = "Phone number";
+"email_sent_to_%@" = "Um email foi enviado para o endereço de email %@.";
+"name" = "Nome";
+"phoneNumber" = "Nº de Telefone";
 "email" = "Email";
-"password" = "Password";
-"account" = "Account";
-"try_again" = "Try again";
-"weak" = "Weak";
-"too_weak"="Too Weak";
-"regular" = "Regular";
-"strong" = "Strong";
-"phoneNumber_in_use" = "This phone number is in use.";
-"invalid_code" = "Invalid code";
+"password" = "Senha";
+"account" = "Conta";
+"try_again" = "Tente Novamente";
+"weak" = "Fraca";
+"too_weak"="Muito Fraca";
+"regular" = "Média";
+"strong" = "Forte";
+"phoneNumber_in_use" = "Esse número está em uso.";
+"invalid_code" = "Código inválido";
 "sms-%@" = "SMS - %@";
 "email-%@" = "Email - %@";
-"sms_sent_to_%@" = "A sms was sent to phone number %@.";
-"next" = "Next";
-"validate" = "Validate";
-"email_in_use" = "This email is in use.";
-"confirm" = "Confirm";
+"sms_sent_to_%@" = "Um sms foi enviado para o número %@.";
+"next" = "Próximo";
+"validate" = "Validar";
+"email_in_use" = "Esse email está em uso.";
+"confirm" = "Confirmar";
