--- a/NuiOS/pt-BR.lproj/Profile.strings
+++ b/NuiOS/pt-BR.lproj/Profile.strings
@@ -6,7 +6,7 @@
 "6dv-jz-kRX.text" = "Add imagem";
 
 /* Class = "UILabel"; text = "Phone number"; ObjectID = "9Qn-4h-R7o"; */
-"9Qn-4h-R7o.text" = "Número";
+"9Qn-4h-R7o.text" = "Telefone";
 
 /* Class = "UILabel"; text = "Email"; ObjectID = "BGv-V6-Q8E"; */
 "BGv-V6-Q8E.text" = "Email";
