--- a/NuiOS/pt-BR.lproj/Localizable.strings
+++ b/NuiOS/pt-BR.lproj/Localizable.strings
@@ -48,8 +48,10 @@
 "session_expired_title" = "Sessão Expirada";
 "your_session_expired" = "A sua sessão expirou. Faça login novamente.";
 
-"google_disconnect_title" = "Disconectar conta";
+
+"disconnect_title" = "Desconectar conta";
 "google_disconnect_mess" = "Se disconectar, você não poderá entrar usando o Google.\n\nDeseja continar ?";
+"facebook_disconnect_mess" = "Se desconectar, você não poderá entrar usando o Facebook.\n\nDeseja continar ?";
 
 //MARK: - NotificationBannerShortcuts
 "request_error" = "Erro na requisição";
